--- a/src/components/search/search-input.css
+++ b/src/components/search/search-input.css
@@ -6,15 +6,15 @@
   --border-color: var(--chakra-colors-gray-600);
 }
 
-.search-input {
-  background-color: transparent !important;
-  border: 1px solid var(--border-color) !important;
-}
-
-.search-button {
-  border: 1px solid var(--border-color) !important;
-}
-
-.search-form {
+#search-form {
   width: 50%;
+}
+
+#search-input {
+  background-color: transparent;
+  border: 1px solid var(--border-color);
+}
+
+#search-button {
+  border: 1px solid var(--border-color);
 }
