--- a/src/components/search/search-input.css
+++ b/src/components/search/search-input.css
@@ -1,9 +1,11 @@
 .light-theme {
   --border-color: var(--chakra-colors-gray-200);
+  --hover-background: var(--chakra-colors-gray-200);
 }
 
 .dark-theme {
   --border-color: var(--chakra-colors-gray-600);
+  --hover-background: var(--chakra-colors-whiteAlpha-300);
 }
 
 .search-form {
@@ -11,10 +13,15 @@
 }
 
 .search-form input,
-.search-form button {
+.search-form button,
+.search-form input:hover {
   border: 1px solid var(--border-color);
 }
 
 .search-form input {
   background-color: transparent;
+}
+
+.search-form button:hover {
+  background: var(--hover-background);
 }
